trying to fix footer to bottom on iphone

--- a/main.css
+++ b/main.css
@@ -152,6 +152,7 @@ footer {
   justify-content: center;
   align-items: center;
   /* height: 100%; */
+  background-color: azure;
 }
 
 /* .hills-pattern {
